Bug 1712834 - Adjust caret frame for a significant terminal newline r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D116155